# rinha-de-backend-rust

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: handlers.rs  main.rs  payment_processor.rs
