[package]
name = "rinha-de-backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.42.0"
axum = "0.8.4"
bytes = "1.10.1"
futures-util = "0.3.31"
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
threadpool = "1.8.1"
tokio = { version = "1.46.1", features = ["full"] }
