[package]
name = "rinha-de-backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.42.0"
axum = "0.8.4"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11"
futures-util = "0.3.31"
log = "0.4.27"
recloser = "1.1.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
threadpool = "1.8.1"
tokio = { version = "1.46.1", features = ["full"] }
