[package]
name = "rinha-de-backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.42.0"
axum = "0.8.4"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11"
futures-util = "0.3.31"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = { version = "0.1.16", features = ["server"] }
log = "0.4.27"
recloser = "1.1.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
threadpool = "1.8.1"
tokio = { version = "1.46.1", features = ["full"] }
viz = "0.10.0"
